add secure chat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["AESGCM", "jsonify", "securecrypto", "urandom"]
+  "cSpell.words": [
+    "AESGCM",
+    "connstream",
+    "jsonify",
+    "keyid",
+    "securecrypto",
+    "urandom"
+  ]
 }
